--- a/src/resources/sass/planning-poker.scss
+++ b/src/resources/sass/planning-poker.scss
@@ -6,13 +6,10 @@
 @import "compass/reset";
 @import "compass/css3";
 @import "compass/css3/hyphenation";
-
+@import "compass/css3/transform";
 
 @import "fonts";
-@import "mixins";
 @import "defaults";
-@import "variables";
 @import "layout";
-@import "scrollcontainer";
+@import "components/includes";
 @import "templates/includes";
-
