--- a/src/resources/sass/templates/layouts/_main.scss
+++ b/src/resources/sass/templates/layouts/_main.scss
@@ -1,6 +1,65 @@
-.main-layout {
-  width: 100% !important;
-  height: 100% !important;
+@mixin title {
+  h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+  }
 }
 
+@mixin item($color) {
+  .item {
+    padding: 10px 5px;
+    margin: 5px 0px;
+    border-radius: 4px;
+    background-color: $color;
+  }
+}
 
+// variables
+$view-border: grey 1px solid;
+$view-padding: 20px;
+$edit-item-color: #b0c4de;
+
+// expressions
+$quad-size: 100px * 3;
+
+.main-layout {
+  width: 100%;
+  height: 100%;
+
+  // nested class / namespacing
+  .edit-view {
+    padding: $view-padding;
+    border-right: $view-border;
+    @include title();
+    @include item($edit-item-color);
+  }
+
+  .detail-view {
+
+    .data-view {
+      padding: $view-padding;
+      border-bottom: $view-border;
+      border-right: $view-border;
+      @include title();
+
+      // set data item color depending on the edit item color
+      @include item(lighten($edit-item-color, 15%));
+    }
+
+    .render-view {
+
+      border-right: $view-border;
+      padding: $view-padding;
+
+      @include title();
+
+      .quad-view {
+        overflow: hidden;
+        .quad {
+          width: $quad-size;
+          height: $quad-size;
+        }
+      }
+    }
+  }
+}
